<resources>
    <string name="app_name">Plasma Donor App</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_the_mobile_number">Enter the Mobile Number</string>
    <string name="login">Login</string>
    <string name="app_logo">App Logo</string>
    <string name="proceed">Proceed</string>
    <string name="homescreen_activity">HomeScreen Activity</string>
    <string name="verify">Verify</string>
    <string name="enter_otp">Enter OTP (123)</string>
    <string name="enter_otp_sent_on_your_mobile">Enter OTP sent on your mobile</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="verify_screen_logo">Verify Screen Logo</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string-array name="gender">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string-array name="blood_grp">
        <item>Blood Group</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>
    <string name="plasma_donor">PLASMA DONOR</string>
    <string name="blood_group">Blood Group</string>
    <string name="gender">Gender</string>

    <string name="edittext_hint_first_name">First Name</string>
    <string name="edittext_hint_last_name">Last Name</string>
    <string name="edittext_hint_gender">Gender</string>
    <string name="edittext_hint_age">Age</string>
    <string name="edittext_hint_blood_group">Blood Group</string>
    <string name="edittext_hint_weight">Weight</string>
    <string name="edittext_hint_email_id">Email</string>
    <string name="edittext_hint_mobile">Mobile</string>
    <string name="edittext_hint_location">Location</string>
    <string name="button_text_save">Save</string>
    <string name="err_first_name">Firstname cannot be empty!</string>
    <string name="err_last_name">LastName cannot be empty</string>
    <string name="err_age">Age cannot be empty!</string>
    <string name="err_gender">Gender cannot be empty</string>
    <string name="err_blood_group">Blood Group cannot be empty</string>
    <string name="err_weight">Weight cannot be empty!</string>
    <string name="err_email">Please enter a proper EmailId</string>
    <string name="err_phone">Please enter a valid PhoneNumber</string>
    <string name="err_location">Location cannot be empty</string>
    <string name="err_msg_no_user_detail">Please add your personal details.</string>
    <string name="err_user_detail_firebase__fetch_failure">Something went wrong fetching user details</string>
    <string name="err_user_detail_firebase__save_failure">Something went wrong, Please try again</string>
    <string name="msg_profile_update_success">Profile Updated Successfully</string>
    <string name="list_name">"Name        :" %s</string>
    <string name="list_location">"Location   :" %s</string>
    <string name="list_phone">"Phone       :" %s</string>
    <string name="list_age">"Age            :" %s</string>
    <string name="list_blood">Blood Group: %s</string>
    <string name="list_hospital">"Hospital   :" %s</string>
    <string name="about">About</string>
    <string name="developed_with_by_dsc_jss">Developed with ❤ by DSC JSS</string>
    <string name="edittext_hint_name">Name</string>
    <string name="diabetes">Diabetes</string>
    <string name="liver_problem">Liver Problem</string>
    <string name="bp_problem">BP Problem</string>
    <string name="submit">Submit</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="edittext_hint_password">Password</string>
    <string name="forgot">Forgot?</string>
    <string name="or">or continue with</string>
    <string name="log_in_with_gmail">Log In with Gmail</string>
    <string name="hospital">Hospital</string>
    <string name="add_patient_call">Add Patient</string>
    <string name="add_donor_call">Add Donor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Facebook login -->
    <string name="facebook_app_id">770579600557177</string>
    <string name="fb_login_protocol_scheme">fb770579600557177</string>


</resources>
