<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent">

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etEmailLogin"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="22dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"/>

    <TextView
        android:id="@+id/tvSignUpLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvLogin"
        app:layout_constraintBottom_toBottomOf="@id/tvLogin"
        android:layout_marginEnd="22dp"
        android:textSize="20sp"
        android:textColor="@android:color/darker_gray"/>


    <EditText
        android:id="@+id/etEmailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/etPasswordLogin_layout"
        android:hint="@string/edittext_hint_email_id"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="10dp"
        android:textSize="16sp"
        android:padding="14dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPasswordLogin_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/tvLoginButton"
        app:layout_constraintStart_toStartOf="@id/etEmailLogin"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        android:layout_marginBottom="24dp"
        app:passwordToggleEnabled="true" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edittext_hint_password"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:textSize="16sp"
            android:padding="14dp"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot"
        android:gravity="center"
        android:padding="5dp"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/etPasswordLogin_layout"
        app:layout_constraintBottom_toBottomOf="@id/etPasswordLogin_layout"
        android:layout_marginEnd="10dp"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/tvLoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/llOR"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="16dp"
        android:textSize="16sp"
        android:background="@drawable/btn_red_background"
        android:padding="14dp"/>

    <LinearLayout
        android:id="@+id/llOR"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvLoginGmail"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="16dp">

        <View
            android:layout_width="0dp"
            android:layout_height="0.6dp"
            android:layout_weight="1"
            android:background="@color/colorGray"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/colorGray"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/or"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0.6dp"
            android:layout_weight="1"
            android:background="@color/colorGray"
            android:layout_gravity="center"/>


    </LinearLayout>

    <TextView
        android:id="@+id/tvLoginGmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in_with_gmail"
        android:gravity="center"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="30dp"
        android:textSize="16sp"
        android:background="@drawable/btn_trans_background"
        android:padding="14dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
